# exocortex

./: .gitignore  Dockerfile  README.md  config.yaml  orchestrator.py  partystarter.sh  pyproject.toml
app/: main.py
app/api/: endpoints.py
app/core/: config.py  cortex.py  gitops.py  ingest.py
