[project]
name = "exocortex-engine"
version = "0.1.0"
description = "A sovereign, local cognitive infrastructure for Home Assistant."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "duckdb>=0.10.0",
    "lancedb>=0.5.0",
    "dvc>=3.48.0",
    "dvc-s3>=3.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "loguru>=0.7.2",
    "pyyaml>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
